# company-enricher

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
data/: industrials.xlsx
data/input/: companies.csv  test.csv
src/company_enricher/: __init__.py  cache.py  cli.py  config.py  logging_config.py
src/company_enricher/fetchers/: __init__.py  companies_house.py  geocoder.py  web_search.py  website_scraper.py
src/company_enricher/parsers/: __init__.py  filing_ixbrl.py  filing_pdf.py  html_meta.py
src/company_enricher/pipeline/: __init__.py  batch.py  enricher.py  rate_limiter.py
src/company_enricher/scripts/: ingest_xlsx.py  run_enrichment.py  test_api_key.py
src/company_enricher/utils/: __init__.py  typing.py
src/scripts/: ingest_xlsx.py
tests/: __init__.py  test_parsers.py  test_rate_limiter.py
